--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -318,3 +318,43 @@ jobs:
           git add Formula/txtx.rb
           git commit -m "Update to version ${{ needs.get_release_info.outputs.tag }}"
           git push https://txtx:${{ secrets.TXTX_ACCESS_TOKEN }}@github.com/txtx/homebrew-txtx.git
+  
+  snapcraft:
+    name: Update Snapcraft
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/heads/main') && needs.get_release_info.outputs.tag != ''
+    needs:
+      - dist_txtx
+      - get_release_info
+      - release
+    permissions:
+      actions: write
+      contents: write
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+
+      - name: Set up Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Clone the tap repository
+        run: |
+          git clone https://github.com/txtx/snapcraft-txtx.git
+          cd snapcraft-txtx
+
+      - name: Update snapcraft.yaml
+        run: |
+          NEW_VERSION="${{ needs.get_release_info.outputs.tag }}"
+          SOURCE_URL="https://github.com/txtx/txtx/releases/download/v${NEW_VERSION}/txtx-linux-x64.tar.gz"
+
+          # Update the version and source URL in the snapcraft.yaml file
+          sed -i "s/^version:.*/version: '${NEW_VERSION}'/" snapcraft.yaml
+          sed -i "s|^source: .*|source: ${SOURCE_URL}|" snapcraft.yaml
+
+      - name: Commit and push changes
+        run: |
+          git add snapcraft.yaml
+          git commit -m "Update to version ${{ needs.get_release_info.outputs.tag }}"
+          git push https://txtx:${{ secrets.TXTX_ACCESS_TOKEN }}@github.com/txtx/snapcraft-txtx.git
