--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ members = [
     "crates/txtx-lsp",
     "addons/bitcoin",
     "addons/evm",
-    "addons/sp1",
     "addons/stacks",
-    "addons/telegram"
+    "addons/telegram",
+    "addons/sp1", 
 ]
 default-members = ["crates/txtx-cli"]
 resolver = "2"
@@ -29,3 +29,4 @@ txtx-addon-network-evm = { path = "addons/evm" }
 txtx-addon-network-bitcoin = { path = "addons/bitcoin" }
 txtx-addon-network-stacks = { path = "addons/stacks" }
 txtx-addon-telegram = { path = "addons/telegram" }
+txtx-addon-sp1 = { path = "addons/sp1" }
