--- a/addons/stacks/Cargo.toml
+++ b/addons/stacks/Cargo.toml
@@ -7,11 +7,9 @@ license = "GPL-3.0"
 [dependencies]
 txtx-addon-kit = { workspace = true, default-features = false}
 lazy_static = "1.4.0"
-clarity-repl = { version = "2.0.0", default-features = false }
-clarity-vm = { version = "=2.1.1", default-features = false }
-clarinet-deployments = { version = "1.0.3", default-features = false }
-wasm-bindgen = { version = "=0.2.93", optional = true }
-wasm-bindgen-futures = { version = "0.4", optional = true }
+clarity = { git = "https://github.com/stacks-network/stacks-core.git", branch="feat/clarity-wasm-develop", package = "clarity", default-features = false }
+clarity-repl = { git = "https://github.com/hirosystems/clarinet.git", tag="v2.8.0", package = "clarity-repl", default-features = false }
+clarinet-deployments = { git = "https://github.com/hirosystems/clarinet.git", tag="v2.8.0", package = "clarinet-deployments", default-features = false }
 hmac = "0.12.0"
 pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
 tiny-hderive = { version = "0.3.0" }
@@ -23,12 +21,16 @@ async-recursion = "1"
 toml = "0.5"
 
 [features]
-default = ["clarity-repl/sdk", "clarity-vm/default", "clarinet-deployments/default", "txtx-addon-kit/default"]
+default = [
+  "clarity/default", 
+  "clarity-repl/sdk", 
+  "clarinet-deployments/default", 
+  "txtx-addon-kit/default"
+]
 wasm = [
   "txtx-addon-kit/wasm",
-  "wasm-bindgen",
+  "clarity/wasm",
   "clarity-repl/wasm",
-  "clarity-vm/wasm",
   "clarinet-deployments/wasm",
 ]
 
