--- a/crates/txtx-addon-kit/Cargo.toml
+++ b/crates/txtx-addon-kit/Cargo.toml
@@ -33,6 +33,8 @@ serde_json = "1"
 sha2 = "0.10.8"
 indexmap = { version = "2.2.6", features = ["serde"] } 
 dotenvy_macro = "0.15.7"
+wasm-bindgen = { version = "0.2.93", optional = true }
+wasm-bindgen-futures = { version = "0.4.41", optional = true }
 
 [dev-dependencies]
 test-case = "*"
@@ -40,7 +42,7 @@ hiro-system-kit = "0.3.4"
 
 [features]
 default=[]
-wasm = []
+wasm = ["wasm-bindgen", "wasm-bindgen-futures"]
 
 [lib]
 crate-type = ["lib", "cdylib"]
