--- a/crates/txtx-lsp/Cargo.toml
+++ b/crates/txtx-lsp/Cargo.toml
@@ -22,8 +22,8 @@ txtx-addon-telegram = { workspace = true }
 console_error_panic_hook = { version = "0.1", optional = true }
 js-sys = { version = "0.3", optional = true }
 serde-wasm-bindgen = { version = "0.6.4", optional = true }
-wasm-bindgen = { version = "=0.2.93", optional = true }
-wasm-bindgen-futures = { version = "0.4", optional = true }
+wasm-bindgen = { version = "0.2.91", optional = true }
+wasm-bindgen-futures = { version = "0.4.41", optional = true }
 web-sys = { version = "0.3", features = ["console"], optional = true }
 
 [features]
