--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -59,6 +59,7 @@ tower-lsp = { version = "0.20.0" }
 [features]
 default = ["cli"]
 cli = ["clap", "clap_generate", "toml", "ctrlc", "hiro-system-kit/log"]
+web_ui = []
 debug = ["hiro-system-kit/debug"]
 release = ["hiro-system-kit/release"]
 # Sp1 is pulling dependencies degrading our WASM compatibility
