tests(stacks): pull test harness crate; add fixtures/tests

--- a/addons/stacks/Cargo.toml
+++ b/addons/stacks/Cargo.toml
@@ -20,6 +20,9 @@ serde_derive = "1"
 async-recursion = "1"
 toml = "0.5"
 
+[dev-dependencies]
+txtx-test-utils = { path = "../../crates/txtx-test-utils" }
+
 [features]
 default = [
   "clarity/default", 
