--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -19,12 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build .env file
-        run: |
-          touch .env
-          echo RELAYER_BASE_URL="https://txtx.link" >> .env
-          echo RELAYER_HOST="txtx.link" >> .env
-          echo INFURA_API_KEY=${{ secrets.INFURA_API_KEY }} >> .env
-          cat .env
+        uses: ./github/actions/setup-env
 
       - name: Install Rust toolchain
         run: |
@@ -49,5 +44,29 @@ jobs:
       - name: Build WASM for txtx-addon-network-stacks
         run: cargo build --package txtx-addon-network-stacks --release --locked --target wasm32-unknown-unknown --features wasm --no-default-features
 
+  tests:
+    name: Run Test Suite
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Build .env file
+        uses: ./github/actions/setup-env
+
+      - name: Install Rust toolchain
+        run: |
+          rustup toolchain install 1.79 --profile minimal --target wasm32-unknown-unknown
+          rustup target add wasm32-unknown-unknown
+          echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
+
+      - name: Cache cargo
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/
+            ./target/wasm32-unknown-unknown/release/
+          key: ${{ runner.os }}-rust-${{ env.RUST_VERSION_HASH }}-cargo-${{ hashFiles('./Cargo.lock') }}
+
       - name: Run Tests
-        run: cargo test --all
+      run: cargo test --all
