--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: WASM Build & Tests
 on:
   pull_request:
     branches:
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build .env file
-        uses: ./github/actions/setup_env
+        uses: ./github/actions/setup-env
 
       - name: Install Rust toolchain
         run: |
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build .env file
-        uses: ./github/actions/setup_env
+        uses: ./github/actions/setup-env
 
       - name: Install Rust toolchain
         run: |
