--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Build .env file
         uses: ./.github/actions/setup-env
+        with:
+          infura_api_key: ${{ secrets.INFURA_API_KEY }}
 
       - name: Install Rust toolchain
         run: |
@@ -54,6 +56,8 @@ jobs:
 
       - name: Build .env file
         uses: ./.github/actions/setup-env
+        with:
+          infura_api_key: ${{ secrets.INFURA_API_KEY }}
 
       - name: Install Rust toolchain
         run: |
