--- a/.github/actions/setup_env/action.yml
+++ b/.github/actions/setup_env/action.yml
@@ -13,6 +13,6 @@ runs:
         touch .env
         echo RELAYER_BASE_URL="https://txtx.link" >> .env
         echo RELAYER_HOST="txtx.link" >> .env
-        echo INFURA_API_KEY="${{ secrets.INFURA_API_KEY }}" >> .env
+        echo INFURA_API_KEY="${{ inputs.INFURA_API_KEY }}" >> .env
         cat .env
       shell: bash
