feat(bitcoin): initial commit for bitcoin driver

--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/main.rs"
 txtx-core = { workspace = true }
 txtx-addon-network-stacks = { workspace = true }
 txtx-addon-network-evm = { workspace = true }
+txtx-addon-network-bitcoin = { workspace = true }
 txtx-addon-telegram = { workspace = true }
 txtx-addon-sp1 = { workspace = true, optional = true }
 txtx-gql = { workspace = true }
