--- a/addons/bitcoin/Cargo.toml
+++ b/addons/bitcoin/Cargo.toml
@@ -2,7 +2,7 @@
 name = "txtx-addon-network-bitcoin"
 version = "0.1.0"
 edition = "2021"
-license = "GPL-3.0"
+license = "Apache-2.0"
 
 [dependencies]
 txtx-addon-kit = { workspace = true, default-features = false}
