1. Skeleton for the solana addon 2. Fix for the zeroize dependency - using github revs with forks of solana and curve25519-dalek in radicleart github

--- a/addons/solana/Cargo.toml
+++ b/addons/solana/Cargo.toml
@@ -12,6 +12,9 @@ serde = "1"
 serde_derive = "1"
 async-recursion = "1"
 toml = "0.5"
+#solana-sdk = "2.0.8"
+#solana-sdk = { path = "../../../solana/sdk" }
+solana-sdk = { git = "https://github.com/radicleart/solana", branch = "zeroize_fix", subdir = "solana/sdk" }
 
 [dev-dependencies]
 txtx-test-utils = { path = "../../crates/txtx-test-utils" }
