starting encoders + language experiments

--- a/addons/solana/Cargo.toml
+++ b/addons/solana/Cargo.toml
@@ -15,6 +15,7 @@ toml = "0.5"
 #solana-sdk = "2.0.8"
 #solana-sdk = { path = "../../../solana/sdk" }
 solana-sdk = { git = "https://github.com/radicleart/solana", branch = "zeroize_fix", subdir = "solana/sdk" }
+# solana-client = { git = "https://github.com/radicleart/solana", branch = "zeroize_fix", subdir = "solana/client" }
 
 [dev-dependencies]
 txtx-test-utils = { path = "../../crates/txtx-test-utils" }
