--- a/addons/solana/Cargo.toml
+++ b/addons/solana/Cargo.toml
@@ -11,7 +11,8 @@ serde_json = "1.0.113"
 serde = "1"
 serde_derive = "1"
 async-recursion = "1"
-toml = "0.5"
+bincode = "1.3"
+
 #solana-sdk = "2.0.8"
 #solana-sdk = { path = "../../../solana/sdk" }
 solana-sdk = { git = "https://github.com/radicleart/solana", branch = "zeroize_fix", subdir = "solana/sdk" }
