--- a/addons/solana/Cargo.toml
+++ b/addons/solana/Cargo.toml
@@ -15,6 +15,8 @@ bincode = "1.3"
 
 #solana-sdk = "2.0.8"
 #solana-sdk = { path = "../../../solana/sdk" }
+#solana-sdk = { git = "https://github.com/txtx/solana", branch = "zeroize-fix", subdir = "solana/sdk" }
+#solana-client = { git = "https://github.com/txtx/solana", branch = "zeroize-fix", subdir = "solana/client" }
 solana-sdk = { git = "https://github.com/radicleart/solana", branch = "zeroize_fix", subdir = "solana/sdk" }
 # solana-client = { git = "https://github.com/radicleart/solana", branch = "zeroize_fix", subdir = "solana/client" }
 
