ci: unpack all artifacts before release

--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -254,6 +254,12 @@ jobs:
       - name: Download pre-built dists
         uses: actions/download-artifact@v3
 
+      - name: Unpack the artifact
+        run: |
+          for file in *.zip; do
+            unzip "$file";
+          done
+
       - name: Tag and Release
         uses: ncipollo/release-action@v1
         with:
