ci: add some debug calls; change to appropriate dir for snap/brew

--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -225,9 +225,6 @@ jobs:
           tag: ${{ needs.get_release_info.outputs.tag }}
           commit: ${{ env.GITHUB_SHA }}      
       
-      - name: List Directory
-        run: ls -la
-
       - name: Pack artifacts
         run: | 
           tar -czvf txtx-linux-x64.tar.gz txtx-linux-x64
@@ -301,6 +298,11 @@ jobs:
 
       - name: Update the formula with new version and SHA256 values
         run: |
+          pwd
+          ls
+          cd homebrew-txtx
+          pwd
+          ls
           # Define the new version
           NEW_VERSION="${{ needs.get_release_info.outputs.tag }}"
           
@@ -321,6 +323,11 @@ jobs:
 
       - name: Commit and push changes
         run: |
+          pwd
+          ls
+          cd homebrew-txtx
+          pwd
+          ls
           git add Formula/txtx.rb
           git commit -m "Update to version ${{ needs.get_release_info.outputs.tag }}"
           git push https://txtx:${{ secrets.TXTX_ACCESS_TOKEN }}@github.com/txtx/homebrew-txtx.git
@@ -352,6 +359,11 @@ jobs:
 
       - name: Update snapcraft.yaml
         run: |
+          pwd
+          ls
+          cd snapcraft-txtx
+          pwd
+          ls
           NEW_VERSION="${{ needs.get_release_info.outputs.tag }}"
           SOURCE_URL="https://github.com/txtx/txtx/releases/download/v${NEW_VERSION}/txtx-linux-x64.tar.gz"
 
@@ -361,6 +373,11 @@ jobs:
 
       - name: Commit and push changes
         run: |
+          pwd
+          ls
+          cd snapcraft-txtx
+          pwd
+          ls
           git add snapcraft.yaml
           git commit -m "Update to version ${{ needs.get_release_info.outputs.tag }}"
           git push https://txtx:${{ secrets.TXTX_ACCESS_TOKEN }}@github.com/txtx/snapcraft-txtx.git
