--- a/addons/solana/Cargo.toml
+++ b/addons/solana/Cargo.toml
@@ -13,10 +13,7 @@ serde_derive = "1"
 async-recursion = "1"
 bincode = "1.3"
 
-#solana-sdk = "2.0.8"
-#solana-sdk = { path = "../../../solana/sdk" }
-solana-sdk = { git = "https://github.com/radicleart/solana", branch = "zeroize_fix", subdir = "solana/sdk" }
-# solana-client = { git = "https://github.com/radicleart/solana", branch = "zeroize_fix", subdir = "solana/client" }
+solana-sdk = { git = "https://github.com/txtx/solana", subdir = "solana/sdk" }
 
 [dev-dependencies]
 txtx-test-utils = { path = "../../crates/txtx-test-utils" }
