fix: solana dependency tree

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,9 @@ txtx-addon-network-stacks = { path = "addons/stacks" }
 txtx-addon-network-solana = { path = "addons/solana" }
 txtx-addon-telegram = { path = "addons/telegram" }
 txtx-addon-sp1 = { path = "addons/sp1" }
+
+[patch.crates-io]
+solana-curve25519 =  { git = "https://github.com/txtx/solana", subdir = "curves/curve25519" }
+solana-program = { git = "https://github.com/txtx/solana", subdir = "sdk/program" }
+solana-zk-sdk = { git = "https://github.com/txtx/solana", subdir = "zk-sdk" }
+solana-zk-token-sdk = { git = "https://github.com/txtx/solana", subdir = "zk-token-sdk" }
