--- a/addons/solana/Cargo.toml
+++ b/addons/solana/Cargo.toml
@@ -5,15 +5,15 @@ edition = "2021"
 license = "Apache-2.0"
 
 [dependencies]
-txtx-addon-kit = { workspace = true, default-features = false}
+txtx-addon-kit = { workspace = true, default-features = false }
 lazy_static = "1.4.0"
 serde_json = "1.0.113"
 serde = "1"
 serde_derive = "1"
 async-recursion = "1"
 bincode = "1.3"
-
 solana-sdk = { git = "https://github.com/txtx/solana", subdir = "solana/sdk" }
+solana-client = { git = "https://github.com/txtx/solana", subdir = "solana/client", default-features = false }
 
 [dev-dependencies]
 txtx-test-utils = { path = "../../crates/txtx-test-utils" }
