--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -359,6 +359,7 @@ jobs:
 
       - name: Update snapcraft.yaml
         run: |
+          cd snapcraft-txtx
           NEW_VERSION="${{ needs.get_release_info.outputs.tag }}"
           SOURCE_URL="https://github.com/txtx/txtx/releases/download/v${NEW_VERSION}/txtx-linux-x64.tar.gz"
 
@@ -368,6 +369,7 @@ jobs:
 
       - name: Commit and push changes
         run: |
+          cd snapcraft-txtx
           git add snapcraft.yaml
           git commit -m "Update to version ${{ needs.get_release_info.outputs.tag }}"
           git push https://txtx:${{ secrets.TXTX_ACCESS_TOKEN }}@github.com/txtx/snapcraft-txtx.git
