--- a/addons/solana/Cargo.toml
+++ b/addons/solana/Cargo.toml
@@ -14,6 +14,8 @@ async-recursion = "1"
 bincode = "1.3"
 solana-sdk = { git = "https://github.com/txtx/solana", subdir = "solana/sdk" }
 solana-client = { git = "https://github.com/txtx/solana", subdir = "solana/client", default-features = false }
+anchor-lang-idl = "0.1.1"
+borsh = "1.5.1"
 
 [dev-dependencies]
 txtx-test-utils = { path = "../../crates/txtx-test-utils" }
