--- a/crates/txtx-gql/Cargo.toml
+++ b/crates/txtx-gql/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "txtx-gql"
+description = "Primitives for supervising Txtx runbooks execution"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
@@ -10,11 +11,13 @@ categories = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# txtx-addon-kit = { version = "0.1" }
 txtx-addon-kit = { workspace = true }
 futures = { version = "0.3.22", features = ["alloc"], default-features = false }
 futures-enum = { version = "0.1.12", default-features = false }
 uuid = { version = "1.6.1", features = ["serde", "v7"] }
 juniper = { version = "0.16.1" }
-juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
+juniper_codegen = { version = "0.16.0" }
+# juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
 async-stream = "0.3.5"
 tokio = "1.37.0"
