--- a/addons/svm/examples/hellosol/txtx.yml
+++ b/addons/svm/examples/hellosol/txtx.yml
@@ -8,12 +8,12 @@ runbooks:
     location: runbooks/maintenance/hellosol.tx
 environments:
   localhost:
-    solana_network_id: devnet
-    solana_api_url: http://127.0.0.1:8899
+    svm_network_id: devnet
+    svm_api_url: http://127.0.0.1:8899
     anchor_manifest_path: ./Anchor.toml
   devnet:
-    solana_network_id: devnet
-    solana_api_url: https://api.devnet.solana.com
+    svm_network_id: devnet
+    svm_api_url: https://api.devnet.solana.com
     anchor_manifest_path: ./Anchor.toml
   testnet:
   mainnet:
