--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ members = [
     "addons/bitcoin",
     "addons/evm",
     "addons/stacks",
-    "addons/solana",
+    "addons/svm",
     "addons/telegram",
     "addons/sp1", 
 ]
@@ -29,7 +29,7 @@ txtx-gql = { path = "crates/txtx-gql" }
 txtx-addon-network-evm = { path = "addons/evm" }
 txtx-addon-network-bitcoin = { path = "addons/bitcoin" }
 txtx-addon-network-stacks = { path = "addons/stacks" }
-txtx-addon-network-solana = { path = "addons/solana" }
+txtx-addon-network-svm = { path = "addons/svm" }
 txtx-addon-telegram = { path = "addons/telegram" }
 txtx-addon-sp1 = { path = "addons/sp1" }
 
