--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "addons/bitcoin",
     "addons/evm",
     "addons/stacks",
+    "addons/svm",
     "addons/telegram",
     "addons/sp1", 
 ]
@@ -28,5 +29,12 @@ txtx-gql = { path = "crates/txtx-gql" }
 txtx-addon-network-evm = { path = "addons/evm" }
 txtx-addon-network-bitcoin = { path = "addons/bitcoin" }
 txtx-addon-network-stacks = { path = "addons/stacks" }
+txtx-addon-network-svm = { path = "addons/svm" }
 txtx-addon-telegram = { path = "addons/telegram" }
 txtx-addon-sp1 = { path = "addons/sp1" }
+
+[patch.crates-io]
+solana-curve25519 =  { git = "https://github.com/txtx/solana", subdir = "curves/curve25519" }
+solana-program = { git = "https://github.com/txtx/solana", subdir = "sdk/program" }
+solana-zk-sdk = { git = "https://github.com/txtx/solana", subdir = "zk-sdk" }
+solana-zk-token-sdk = { git = "https://github.com/txtx/solana", subdir = "zk-token-sdk" }
