--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -104,7 +104,7 @@ jobs:
         run: |
           cd txtx-web-ui
           touch .env
-          echo HANKO_API_URL=${{ secrets.HANKO_API_URL }} >> .env
+          echo ID_SERVICE_URL="https://id.txtx.run" >> .env
           cat .env
           cd ..
 
