chore(core/kit): add keccak std fn

--- a/crates/txtx-addon-kit/Cargo.toml
+++ b/crates/txtx-addon-kit/Cargo.toml
@@ -39,6 +39,7 @@ hmac = "0.12.0"
 pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
 tiny-hderive = { version = "0.3.0" }
 libsecp256k1 = { version = "0.7.0" }
+keccak-hash = "0.11.0"
 
 [dev-dependencies]
 test-case = "3.3"
