chore(ovm): add example

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ addons/sp1/examples/fibonacci/contracts/cache
 state.json
 addons/sp1/examples/fibonacci-target/program/target
 addons/sp1/examples/fibonacci/program/target
+addons/ovm/examples/cache/*
+addons/ovm/examples/out/*
