--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /target
 .DS_Store
 .btcdeb_history
-crates/txtx-web-ui/node_modules
-crates/txtx-web-ui/.parcel-cache
+crates/txtx-supervisor-ui/node_modules
+crates/txtx-supervisor-ui/.parcel-cache
 .env
 addons/evm/src/tests/fixtures/foundry/out/build-info
 addons/sp1/examples/fibonacci/contracts/lib
