--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -96,13 +96,13 @@ jobs:
       - name: Checkout Web UI
         uses: actions/checkout@v4
         with:
-          repository: txtx/txtx-web-ui
+          repository: txtx/txtx-supervisor-ui
           token: ${{ secrets.TXTX_ACCESS_TOKEN }} 
-          path: txtx-web-ui 
+          path: txtx-supervisor-ui 
 
       - name: Build .env file for Web UI
         run: |
-          cd txtx-web-ui
+          cd txtx-supervisor-ui
           touch .env
           echo ID_SERVICE_URL="https://id.txtx.run/proxy" >> .env
           echo TXTX_DEV_NPM_READ_TOKEN="${{ secrets.TXTX_DEV_NPM_READ_TOKEN }}" >> .env
@@ -111,7 +111,7 @@ jobs:
 
       - name: Build Web UI
         run: |
-          cd txtx-web-ui
+          cd txtx-supervisor-ui
           npm i
           npm run build
           cd ..
