--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ crates/txtx-web-ui/node_modules
 crates/txtx-web-ui/.parcel-cache
 .env
 addons/evm/src/tests/fixtures/foundry/out/build-info
+addons/evm/src/contracts/out
+addons/evm/src/contracts/cache
 addons/sp1/examples/fibonacci/contracts/lib
 addons/sp1/examples/fibonacci/contracts/cache
 # addons/sp1/examples/fibonacci/contracts/out
