--- a/crates/txtx-core/Cargo.toml
+++ b/crates/txtx-core/Cargo.toml
@@ -27,6 +27,7 @@ serde_yml = "0.0.11"
 chrono = "0.4.38"
 similar = "2.5.0"
 better-debug = "1.0.1"
+serde_with = "3.11.0"
 
 [dev-dependencies]
 txtx-test-utils = {path = "../../crates/txtx-test-utils"}
