--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -73,5 +73,8 @@ jobs:
             ./target/wasm32-unknown-unknown/release/
           key: ${{ runner.os }}-rust-${{ env.RUST_VERSION_HASH }}-cargo-${{ hashFiles('./Cargo.lock') }}
 
+      - name: Build Project
+        run: cargo build --all --release
+
       - name: Run Tests
         run: cargo test --all
