--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -29,6 +29,9 @@ jobs:
           rustup target add wasm32-unknown-unknown
           echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+
       - name: Cache cargo
         uses: actions/cache@v3
         with:
@@ -64,6 +67,9 @@ jobs:
           rustup toolchain install 1.79 --profile minimal --target wasm32-unknown-unknown
           rustup target add wasm32-unknown-unknown
           echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
 
       - name: Cache cargo
         uses: actions/cache@v3
